# scumm-rust

./: .gitignore  AGENTS.md  Cargo.toml  README.md  chinese1.sc  example.sc  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: test.yml
src/: ast.rs  grammar.pest  interpreter.rs  lib.rs  main.rs  main.ts  preprocessor.rs  style.css
