[package]
name = "scumm-rust"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1", optional = true }
anyhow = "1.0.98"
pest = "2.8.0"
pest_derive = "2.8.0"
thiserror = "2.0.12"
wasm-bindgen-futures = "0.4"
web-sys      = { version = "0.3", features = ["HtmlImageElement",
                                              "Element", "Document",
                                              "Window", "MouseEvent", "DragEvent", "Response", "console",
                                              "DomRect", "Location"] }
futures = "0.3.31"
async-recursion = "1.1.1"
indexmap = "2.9.0"
log = "0.4"

# For WASM console logging
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log = "1.0"

# For native terminal logging
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
